# radiochron

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  wrangler.jsonc
.github/workflows/: ci.yml  release.yml
.wrangler/cache/: cf.json  wrangler-account.json
.wrangler/tmp/bundle-St5j3b/: middleware-insertion-facade.js  middleware-loader.entry.ts
.wrangler/tmp/dev-PxIr97/: no-op-worker.js  no-op-worker.js.map
adapters/esp-idf/: Cargo.toml  README.md
adapters/esp-idf/.cargo/: config.toml
adapters/esp-idf/src/: lib.rs  native.rs
crates/beacontrail/: Cargo.toml
crates/beacontrail-mcp/: Cargo.toml
crates/beacontrail-mcp/src/: main.rs  mcp.rs  report.rs
crates/beacontrail/src/: lib.rs  time.rs
crates/beacontrail/src/events/: detect.rs  mod.rs  sys.rs
crates/beacontrail/src/wlan/: analyze.rs  bss.rs  mod.rs  sample.rs  sys.rs
examples/: chronicle.rs  embedded.rs  embedded_chronicle.rs  probe.rs
site/: electron.html  index.html  license.html  privacy.html  styles.css
src/: connectivity.rs  dll.rs  embedded.rs  lib.rs  main.rs  mcp.rs  schema.rs
src/chronicle/: detect.rs  jsonl.rs  mod.rs  recorder.rs  tests.rs
src/chronicle/recorder/: native.rs  tests.rs
src/connectivity/: diagnose.rs  ip.rs  probe.rs  tests.rs
src/connectivity/ip/: linux.rs  macos.rs  windows.rs
src/embedded/: chronicle.rs
src/embedded/chronicle/: detect.rs  metrics.rs  recorder.rs  tests.rs  types.rs
src/events/: detect.rs  mod.rs  sys.rs  xml.rs
src/events/detect/: tests.rs
src/wlan/: analyze.rs  bss.rs  macos.rs  mod.rs  sample.rs  sys.rs  windows.rs
src/wlan/analyze/: channel.rs  link.rs  scan_quality.rs  security.rs  tests.rs
src/wlan/bss/: model.rs  parser.rs  scan.rs  tests.rs  windows.rs
src/wlan/linux/: mapping.rs  mod.rs  netlink.rs  scan.rs  status.rs  tests.rs
src/wlan/linux/netlink/: socket.rs  tests.rs  wire.rs
src/wlan/macos/: mapping.rs  objc.rs  tests.rs
src/wlan/sample/: tests.rs
src/wlan/windows/: tests.rs
tests/: source_layout.rs
